# cozy-fuse

./: .gitignore  MANIFEST.in  README.md  binaries_download.py  binaries_download_ui.glade  binary.kv  binary.py  config.py  config_ui.glade  configuration.kv  configuration_window.py  couchmount.py  cozy_files  cozy_files.py  dev-requirements.txt  end.kv  end.py  end_configuration.py  end_ui.glade  fuse  install.py  preferences_ui.glade  preferences_window.py  replication  replication.py  setup.cfg  setup.py
cozy-fuse/: __main__.py  actions.py  config.py  couchmount.py  cozy_fuse.py  cozy_fuse_config.py  dbutils.py  download_binary.py  erl_crash.dump  install.py  local_config.py  replication.py
cozyfuse/: __init__.py  __main__.py  actions.py  binarycache.py  cache.py  couchmount.py  cozy_fuse.py  dbutils.py  download_binary.py  end.kv  filecache.py  local_config.py  remote.py  replication.py
cozyfuse/interface/: CozyError.py  CozyFrame.py  CozyTray.py  __init__.py  app.py  app_generated.py  app_modified.py  cozy_client_template.wxg  (+2 more)
interface/: 1 non enregistré.glade  binaries_download_ui.glade  config_ui.glade  end_ui.glade  preferences_ui.glade
scripts/: cozy_fuse
src/: binary.kv  binary.py  compil.py  config.py  configuration.kv  couchmount.py  cozy_files  cozy_files.py  download_binary.py  end.py  install.py  replication.py
test/: test.py
tests/: file_test.txt  test_binary_cache.py  test_cache.py  test_dbutils.py  test_local_config.py  test_remote.py
windows/: binaries_download.py  configuration_window.py  end_configuration.py  preferences_window.py
(+3 files in other folders)
