[metadata]
name = cozy-fuse
version = 0.1.0
author = Zoé Bellot
author-email = zoe@cozycloud.cc
summary = File System for Cozy File
description-file = README.rst
home-page = https://github.com/poupote/cozy-fuse
requires-dist =
    fuse-python>=0.2
    CouchDB>=0.9
    requests>=2.0.1
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Light General Public License v3
    Operating System :: GNU/Linux
    Programming Language :: Python

[files]
packages =
    cozy-fuse/

scripts = cozy-fuse/cozy_fuse.py

data_files =
    cozy-fuse =
        setup.cfg
        setup.py
        README.md
        LICENSE
        MANIFEST.in

[entry_points]
distutils.setup_keywords =
    d2to1 = d2to1.core:d2to1
zest.releaser.prereleaser.middle =
    d2_version = d2to1.zestreleaser:prereleaser_middle
zest.releaser.postreleaser.middle =
    d2_version = d2to1.zestreleaser:postreleaser_middle
